Take and release ownership for the case officer (#108)