@@ -6,17 +6,19 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
-import static uk.co.nstauthority.fieldconsents.teams.TeamTestUtil.randomInteger;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import uk.co.nstauthority.fieldconsents.authentication.ServiceUserDetail;
 import uk.co.nstauthority.fieldconsents.authentication.ServiceUserDetailTestUtil;
 import uk.co.nstauthority.fieldconsents.energyportal.user.EnergyPortalUserDtoTestUtil;
 import uk.co.nstauthority.fieldconsents.teams.Team;
@@ -30,6 +32,8 @@ import uk.co.nstauthority.fieldconsents.teams.TeamType;
 @ExtendWith(MockitoExtension.class)
 class RegulatorTeamServiceTest {
 
+  private static final ServiceUserDetail USER = ServiceUserDetailTestUtil.Builder().build();
+
   @Mock
   private TeamService teamService;
 
@@ -42,35 +46,38 @@ class RegulatorTeamServiceTest {
   @InjectMocks
   private RegulatorTeamService regulatorTeamService;
 
+  private Team team;
+
+  private TeamId teamId;
+
+  @BeforeEach
+  void setUp() {
+    team = TeamTestUtil.Builder().build();
+    teamId = new TeamId(team.getId());
+  }
+
   @Test
   void getRegulatorTeamForUser_whenUserBelongsToRegulatorTeam_thenReturnRegulatorTeam() {
-    var user = ServiceUserDetailTestUtil.Builder().build();
-    var team = new Team();
-    when(teamService.getTeamsOfTypeThatUserBelongsTo(user, TeamType.REGULATOR))
+    when(teamService.getTeamsOfTypeThatUserBelongsTo(USER, TeamType.REGULATOR))
         .thenReturn(List.of(team));
 
-    var result = regulatorTeamService.getRegulatorTeamForUser(user);
+    var result = regulatorTeamService.getRegulatorTeamForUser(USER);
 
     assertThat(result).contains(team);
   }
 
   @Test
   void getRegulatorTeamForUser_whenUserDoesNotBelongToRegulatorTeam_thenReturnEmpty() {
-    var user = ServiceUserDetailTestUtil.Builder().build();
-    when(teamService.getTeamsOfTypeThatUserBelongsTo(user, TeamType.REGULATOR)).thenReturn(List.of());
+    when(teamService.getTeamsOfTypeThatUserBelongsTo(USER, TeamType.REGULATOR))
+        .thenReturn(Collections.emptyList());
 
-    var result = regulatorTeamService.getRegulatorTeamForUser(user);
+    var result = regulatorTeamService.getRegulatorTeamForUser(USER);
 
     assertThat(result).isEmpty();
   }
 
   @Test
   void getTeam_whenMatch_thenReturnTeam() {
-
-    var team = TeamTestUtil.Builder().build();
-
-    var teamId = new TeamId(team.getId());
-
     when(teamService.getTeam(teamId, TeamType.REGULATOR)).thenReturn(Optional.of(team));
 
     assertThat(regulatorTeamService.getTeam(teamId)).contains(team);
@@ -79,11 +86,6 @@ class RegulatorTeamServiceTest {
 
   @Test
   void getTeam_whenNoMatch_thenEmptyOptional() {
-
-    var team = TeamTestUtil.Builder().build();
-
-    var teamId = new TeamId(team.getId());
-
     when(teamService.getTeam(teamId, TeamType.REGULATOR)).thenReturn(Optional.empty());
 
     assertThat(regulatorTeamService.getTeam(teamId)).isEmpty();
@@ -92,32 +94,50 @@ class RegulatorTeamServiceTest {
 
   @Test
   void isAccessManager_whenAccessManager_thenTrue() {
-
-    var teamId = new TeamId(randomInteger());
-    var user = ServiceUserDetailTestUtil.Builder().build();
-
-    when(teamMemberService.isMemberOfTeamWithAnyRoleOf(teamId, user, Set.of(RegulatorTeamRole.ACCESS_MANAGER.name())))
+    when(teamMemberService.isMemberOfTeamWithAnyRoleOf(teamId, USER, Set.of(RegulatorTeamRole.ACCESS_MANAGER.name())))
         .thenReturn(true);
 
-    assertTrue(regulatorTeamService.isAccessManager(teamId, user));
+    assertTrue(regulatorTeamService.isAccessManager(teamId, USER));
   }
 
   @Test
   void isAccessManager_whenAccessManager_thenFalse() {
-
-    var teamId = new TeamId(randomInteger());
-    var user = ServiceUserDetailTestUtil.Builder().build();
-
-    when(teamMemberService.isMemberOfTeamWithAnyRoleOf(teamId, user, Set.of(RegulatorTeamRole.ACCESS_MANAGER.name())))
+    when(teamMemberService.isMemberOfTeamWithAnyRoleOf(teamId, USER, Set.of(RegulatorTeamRole.ACCESS_MANAGER.name())))
         .thenReturn(false);
 
-    assertFalse(regulatorTeamService.isAccessManager(teamId, user));
+    assertFalse(regulatorTeamService.isAccessManager(teamId, USER));
+  }
+
+  @Test
+  void isCaseOfficer_whenCaseOfficer_thenTrue() {
+    when(teamService.getTeamsOfTypeThatUserBelongsTo(USER, TeamType.REGULATOR))
+        .thenReturn(List.of(team));
+    when(teamMemberService.isMemberOfTeamWithAnyRoleOf(teamId, USER, Set.of(RegulatorTeamRole.CASE_OFFICER.name())))
+        .thenReturn(true);
+
+    assertTrue(regulatorTeamService.isCaseOfficer(USER));
+  }
+
+  @Test
+  void isCaseOfficer_whenNotCaseOfficer_thenFalse() {
+    when(teamService.getTeamsOfTypeThatUserBelongsTo(USER, TeamType.REGULATOR))
+        .thenReturn(List.of(team));
+    when(teamMemberService.isMemberOfTeamWithAnyRoleOf(teamId, USER, Set.of(RegulatorTeamRole.CASE_OFFICER.name())))
+        .thenReturn(false);
+
+    assertFalse(regulatorTeamService.isCaseOfficer(USER));
+  }
+
+  @Test
+  void isCaseOfficer_whenNoTeamsOfRegulatorType_thenFalse() {
+    when(teamService.getTeamsOfTypeThatUserBelongsTo(USER, TeamType.REGULATOR))
+        .thenReturn(Collections.emptyList());
+
+    assertFalse(regulatorTeamService.isCaseOfficer(USER));
   }
 
   @Test
   void addUserTeamRoles_verifyRepositoryInteractions() {
-
-    var team = TeamTestUtil.Builder().build();
     var userToAdd = EnergyPortalUserDtoTestUtil.Builder().build();
     var regulatorRoles = Set.of(
         RegulatorTeamRole.ACCESS_MANAGER,
